...

        <TextView
            android:layout_row="0"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome to NoStack"
            android:textColor="@color/lightBlue"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="28sp" />
        <TextView
            android:layout_row="1"
...
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:paddingVertical="15dp"
            android:paddingHorizontal="90dp"
            android:textSize="20sp" />
        <Button
            android:id="@+id/AttendeeSignInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/yellow"
...
