...
            android:textColor="@color/lightBlue"
            android:textSize="17sp" />

    </GridLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listView_yourEvents"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="15dp"
...
